# edda

./: .dockerignore  .gitignore  AGENTS.md  CONSISTENCY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INCONSISTENCIES_AND_STANDARDIZATION.md  README.md
bifrost/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  docker-compose.test.yml
bifrost/config/: bifrost.json.example
bifrost/docs/: ARCHITECTURE.md  BIFROST_CONNECTION_AUTH_PROTOCOL.md  BIFROST_PROTOCOL_SPECIFICATION.md  INTEGRATION_GUIDE.md  MESH_LAYER_DESIGN.md  SECURITY.md  SERVICE_INTEGRATION_PROTOCOLS.md
bifrost/scripts/: run-tests.ps1  run-tests.sh
bifrost/src/: grpc_bridge.rs  lib.rs  main.rs
bifrost/tests/: anomaly_detector_test.rs  audit_logger_test.rs  backward_compat_test.rs  broadcast_multicast_test.rs  challenge_proof_test.rs  challenge_proof_validator_test.rs  challenge_request_test.rs  challenge_response_test.rs  connection_acceptor_test.rs  connection_blocker_test.rs  connection_cache_test.rs  connection_error_handler_test.rs  connection_handler_test.rs  connection_initiator_test.rs  connection_quality_test.rs  connection_status_tracker_test.rs  connection_validation_handler_test.rs  cross_user_connection_blocker_test.rs  data_transfer_request_test.rs  e2e_communication_workflow_test.rs  error_recovery_test.rs  fallback_routing_test.rs  gdpr_compliance_test.rs  grpc_bridge_test.rs  guest_cleanup_test.rs  guest_network_test.rs  heartbeat_test.rs  heimdall_client_test.rs  ice_manager_test.rs  intrusion_detector_test.rs  ip_connection_manager_test.rs  key_generator_test.rs  key_storage_test.rs  local_discovery_manager_test.rs  mdns_service_test.rs  mesh_enforcer_test.rs  mesh_isolation_test.rs  mesh_lifecycle_test.rs  mesh_membership_test.rs  mesh_packet_test.rs  (+33 more)
forseti/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
forseti/config/: forseti.json.example
forseti/migrations/: 001_initial_schema.sql
forseti/proto/: forseti.proto
forseti/python/: __init__.py  ml_training.py  model_export.py  rl_training.py
forseti/scripts/: run-tests.ps1  run-tests.sh
forseti/src/: lib.rs  main.rs
freki/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
freki/config/: freki.json.example
freki/docs/: API.md  ARCHITECTURE.md
freki/scripts/: run-tests.ps1  run-tests.sh
freki/src/: lib.rs  main.rs
freki/tests/: e2e_rag_test.rs  load_test.rs  mod.rs  search_performance_test.rs
frigg/: AGENTS.md  Cargo.toml  Cargo.toml.workspace.md.tpl  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  docker-compose.test.yml
frigg/scripts/: run-tests.ps1  run-tests.sh
frigg/src/: lib.rs  main.rs  plugin.rs
frigg/tests/: plugin_interface_test.rs.tmp.md  plugin_test.rs  plugin_test.rs.tmp.md
geri/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  WORK_SUMMARY.md  build.rs  docker-compose.test.yml
geri/config/: geri.example.json  geri.json.example
geri/docs/: GRPC_SERVICES.md  LOCAL_PROVIDERS.md  MODEL_DOWNLOAD.md  PROVIDER_INTEGRATION.md
geri/migrations/: 202602070000_init_models.sql
geri/proto/: geri.proto
geri/scripts/: run-tests.ps1  run-tests.sh
geri/src/: lib.rs  main.rs
geri/tests/: e2e_llm_workflow_test.rs  grpc_server_test.rs  load_test.rs  mod.rs  performance_test.rs
gladsheim/: AGENTS.md  API_SPECIFICATION.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
gladsheim/proto/: gladsheim.proto
gladsheim/scripts/: run-tests.ps1  run-tests.sh
gladsheim/src/: gladsheim.rs  lib.rs  main.rs
heidrun/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
heidrun/config/: heidrun.json.example
heidrun/migrations/: 001_initial_schema.sql
heidrun/proto/: heidrun.proto
heidrun/scripts/: run-tests.ps1  run-tests.sh
heidrun/src/: lib.rs  main.rs
heimdall/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  README_IMPLEMENTATION_STATUS.md  build.rs  docker-compose.test.yml  run-tests.sh
heimdall/config/: heimdall.json.example
heimdall/docs/: DELEGATION.md  api-grpc.md  security-guide.md
heimdall/migrations/: 001_initial_schema.sql  002_guest_networks.sql  003_guest_network_permissions.sql  004_security_monitoring.sql
heimdall/proto/: authentication.proto  authorization.proto  bifrost_validation.proto  mesh_membership.proto  token.proto
heimdall/scripts/: run-tests.ps1  run-tests.sh
heimdall/src/: lib.rs  main.rs
heimdall/tests/: mod.rs
hirtir/dvalinn/: Cargo.toml
huginn-muninn/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  docker-compose.test.yml
huginn-muninn/docs/: API.md  CONFIGURATION.md
huginn-muninn/huginn/: Cargo.toml  build.rs
huginn-muninn/muninn/: Cargo.toml  build.rs
huginn-muninn/scripts/: run-tests.ps1  (+1 more)
jotunheim/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  docker-compose.test.yml
loki/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  docker-compose.test.yml
mimir/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
nidhoggr/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
nornen/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  build.rs  docker-compose.test.yml
odin/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  build.rs  docker-compose.test.yml
ragnarok/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
ratatoskr/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build.rs  docker-compose.test.yml
thor/: AGENTS.md  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  build.rs  docker-compose.test.yml
(+1429 files in other folders)
