[package]
name = "freki"
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]
description = "RAG Service for Edda - Vector Database, Document Indexing, Context Retrieval"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
notify = "6.1"
qdrant-client = "1.7"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
async-trait = "0.1"
sha2 = "0.10"

[dev-dependencies]
async-trait = "0.1"
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.11"
