[package]
name = "gladsheim"
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]
description = "Service Manager & Runtime Manager for Edda platforms"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
notify = "6.1"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
wiremock = "0.5"

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["http-health", "grpc-health"]
http-health = []
grpc-health = []
