[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]
description = "Security Service for Edda - Authentication, Authorization, and Security Monitoring"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = { version = "0.11", features = ["tls"] }
tonic-health = "0.11"
futures = "0.3"
prost = "0.12"
prost-types = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Crypto
ring = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"

# Configuration
config = "0.14"
notify = "6.1" # For file watching (hot-reload)

# OAuth (optional)
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }

# Email (optional)
lettre = "0.11"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
tonic = "0.11"
tonic-health = "0.11"
tempfile = "3.8"

[features]
default = ["postgres"]
postgres = []
sqlite = ["sqlx/sqlite"]
in-memory = []

[build-dependencies]
tonic-build = "0.11"
