[workspace]
members = [
    "huginn",
    "muninn",
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
notify = "6.1"

# Audio processing
cpal = "0.15"
rodio = "0.17"
hound = "3.5"

# Video processing
ffmpeg-next = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
