[workspace]
members = ["esp32", "generic", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]

[package]
name = "jotunheim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "IoT Platform for Edda - ESP32 and other microcontrollers"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
