[package]
name = "nornen"
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]
description = "Decision Service for Edda - Decision making, rule engine"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
notify = "6.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
testcontainers = "0.15"

[build-dependencies]
tonic-build = "0.11"
