[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2021"
authors = ["Edda Team"]
description = "Business Protocol for Edda - WebSocket-based protocol for business logic communication"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
ring = "0.17"
prost-types = "0.12"
bytes = "1.5"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[build-dependencies]
prost-build = "0.12"
