[package]
name = "dvalinn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Data Validation Service for Hirtir"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonschema = "0.17"
