[package]
name = "muninn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TTS Service for Edda"

[build]
build = "build.rs"

[features]
default = []
# Optional TTS backends (FFI, not yet implemented)
coqui-tts = []
piper = []

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
notify.workspace = true
futures = "0.3"
async-trait = "0.1"
cpal.workspace = true
rodio.workspace = true
hound.workspace = true

# Shared audio utilities
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.11"
