[package]
name = "durathror"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Data Retention Service for Læraðr"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
aws-sdk-s3 = "1.0"
