[package]
name = "hel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Loki sub-service: Data/Storage (Filesystem, Key-Value, Cache)"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
mlua.workspace = true
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
