[package]
name = "loki"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Script Execution Service - Coordinator for Fenrir, Jörmungandr, Hel"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
mlua.workspace = true

# Shared code
shared = { path = "../shared" }

# Sub-services (Script APIs for coordination)
fenrir = { path = "../fenrir" }
jormungandr = { path = "../jormungandr" }
hel = { path = "../hel" }

# Configuration & Hot-Reload
config = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }

# Streaming support
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockito = "1"

[build-dependencies]
tonic-build = "0.11"
