[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared code for Loki services"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
